2011-12-04	Stephan Linz <linz@li-pro.net>

	* ptxconfig: migrate to ptxdist-2011.12.0
	* ptxconfig: upgarde to busybox-1.18.5
	* common: stay on dbus-glib-0.82 (from ptxdist-2010.08.0)
	* common: stay on dbus-1.2.24 (from ptxdist-2010.08.0)
	* common: stay on glib-2.22.1 (from ptxdist-2010.08.0)
	* common: remove rules for glibmm-2.22.1 (from ptxdist-2010.08.0)

2011-11-18	Stephan Linz <linz@li-pro.net>

	* common: upgarde patch sets to u-boot-2011.03
	* common: upgarde patch sets to u-boot-2011.06
	* common: upgarde patch sets to u-boot-2011.09

2011-11-16	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-2.6.37.4
	* common: HOWTO: add reference note ti the right GNU toolchain
	* ptxconfig: enable gdb-7.2 (native debugging)
	* ptxconfig: include and enable new local source debug_test-trunk

2011-11-11	Stephan Linz <linz@li-pro.net>

	* ptxconfig: prepare mbref-uio-trunk for kernel 2.6.37.4
	* common: adapt latest patch sets to linux-2.6.37.4

2011-05-22	Stephan Linz <linz@li-pro.net>

	* common: move xlbsp-to-ptxdist to scripts
	* common: introduce the build_all.mk make script

2011-05-22	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: split image documentation, one for each board
	* common: HOWTO: rename the non-udev default configuration
	* common: HOWTO: more documentation for S2I-ML505-MMU-gige-11.5

2011-05-21	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-2.6.31.13

2011-05-14	Stephan Linz <linz@li-pro.net>

	* ptxconfig: migrate to ptxdist-2011.05.0
	* ptxconfig: add mdev startup script and configuration
	* ptxconfig: upgrade to libuio-0.2.1
	* ptxconfig: upgarde to busybox-1.17.1
	* ptxconfig: expand devnodes for Xilinx SystemACE device files
	* ptxconfig: expand devnodes for ramdisk and loop device files
	* ptxconfig: remove non-udev configuration (use mdev instead)
	* common: introduce the xlbsp-to-ptxdist converter script
	* common: adapt latest patch sets to linux-2.6.31.13